--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ scikit-learn = "0.24.2"
 ipykernel = "^6.15.3"
 pandas = "1.3"
 typer = "^0.6.1"
-requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -30,6 +29,10 @@ pre-commit = "^2.20.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.3"
+
+[tool.pylint]
+max-line-length = 120
+disable = ["C0114"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
