--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,7 +62,8 @@ repos:
     rev: v0.971
     hooks:
       - id: mypy
-        args: [--ignore-missing-imports]
+        additional_dependencies:
+          - "types-requests==2.28.11.2"
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.0
     hooks:
