--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "automata-backend"
+name = "app"
 version = "0.1.0"
 description = "Utilities using best practices with notes and examples"
 authors = ["Felipe Restrepo <maferelo@users.noreply.github.com>"]
@@ -21,24 +21,27 @@ ipykernel = "^6.15.3"
 pandas = "1.3"
 typer = "^0.6.1"
 click = "^8.1.3"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-black = "^22.3.0"
-pylint = "^2.14.1"
-pre-commit = "^2.20.0"
+requests = "^2.28.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.3"
 mypy = "^0.982"
+types-requests = "^2.28.11.2"
+pytest = "^7.1.3"
+black = "^22.10.0"
+pre-commit = "^2.20.0"
+
+[tool.poetry.scripts]
+app = "src.app.console:main"
+
+[tool.mypy]
+exclude = ["notes", "migrations"]
+ignore_missing_imports = "True"
 
 [tool.pylint]
 max-line-length = 120
 disable = ["C0114"]
 ignore = ["notes", "migrations"]
-
-[tool.mypy]
-exclude = ["notes", "migrations"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
