--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,18 +30,34 @@ types-requests = "^2.28.11.2"
 pytest = "^7.1.3"
 black = "^22.10.0"
 pre-commit = "^2.20.0"
+coverage = {extras = ["toml"], version = "^6.5.0"}
+pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 app = "src.app.console:main"
 
+[tool.coverage.paths]
+source = ["src", "*/site-packages"]
+
+[tool.coverage.run]
+branch = true
+source = ["app"]
+
+[tool.coverage.report]
+fail_under = 100
+show_missing = true
+
 [tool.mypy]
-exclude = ["notes", "migrations"]
+exclude = ["apps", "notes", "migrations"]
 ignore_missing_imports = "True"
 
 [tool.pylint]
 max-line-length = 120
-disable = ["C0114"]
+disable = ["C0114", "C0116"]
 ignore = ["notes", "migrations"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
