pre-commit and vscode conflict black

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -53,6 +53,7 @@
         "python.pythonPath": "/app/.venv/bin/python",
         "python.linting.pylintPath": "/app/.venv/bin/pylint",
         "python.linting.pylintEnabled": true,
+        "python.sortImports.args": ["--force-single-line-imports"],
         "workbench.colorCustomizations": {
           "titleBar.activeBackground": "#FFFDD0",
           "titleBar.activeForeground": "#000000"
