--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
     "vscode": {
       "extensions": [
         "2gua.rainbow-brackets",
+        "74th.monokai-charcoal-high-contrast",
         "almenon.arepl",
         "anseki.vscode-color",
         "benjaminbenais.copilot-theme",
