--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ psycopg2-binary = "^2.9.3"
 asyncpg = "^0.25.0"
 alembic = "^1.8.1"
 python-decouple = "^3.6"
-numpy = "1.18.5"
+numpy = "1.22.2"
 scikit-learn = "0.24.2"
 ipykernel = "^6.15.3"
 pandas = "1.3"
@@ -34,6 +34,13 @@ coverage = {extras = ["toml"], version = "^6.5.0"}
 pytest-cov = "^4.0.0"
 nox = "^2022.8.7"
 pytest-mock = "^3.10.0"
+flake8 = "^5.0.4"
+flake8-bandit = "^4.1.1"
+flake8-black = "^0.3.3"
+flake8-bugbear = "^22.9.23"
+flake8-import-order = "^0.18.1"
+safety = "^2.3.1"
+nox-poetry = "^1.0.1"
 
 [tool.poetry.scripts]
 app = "src.app.console:main"
