--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 __pycache__/
-.coverage
+.coverage**
 .DS_Store
 .env
 .mypy_cache/
@@ -9,3 +9,4 @@ __pycache__/
 .vscode/
 *.csv
 docker-compose.override.yml
+dist/
