--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ fail_under = 100
 show_missing = true
 
 [tool.mypy]
-exclude = [".env", "apps", "notes", "migrations"]
+exclude = [".env", ".venv", "apps", "notes", "migrations"]
 ignore_missing_imports = "True"
 
 [tool.pylint]
