pre-commit vscode config and nox

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-ARG VARIANT=3.8-bullseye
+ARG VARIANT=3.7.13-bullseye
 
 FROM mcr.microsoft.com/vscode/devcontainers/python:0-${VARIANT}
 
@@ -7,18 +7,12 @@ ENV \
         PYTHONDONTWRITEBYTECODE=1 \
         PYTHONUNBUFFERED=1
 
-# Allow piped commands to fail at any step and run logging mode
+# Allow piped commands to fail at any step and run, log command
 SHELL ["/bin/bash", "-ceux", "-o", "pipefail"]
 
 WORKDIR /app
 
 COPY .devcontainer/postcreate.sh .devcontainer/
-
-RUN \
-        apt-get update; \
-        apt-get install -y --no-install-recommends python3-dev; \
-        apt-get clean; \
-        rm -rf /var/lib/apt/lists/*
 
 RUN \
         chmod +x .devcontainer/postcreate.sh; \
@@ -34,15 +28,7 @@ RUN \
 
 RUN \
         --mount=type=cache,target=/home/vscode/.cache,uid=1000 \
-        curl https://cli-assets.heroku.com/install.sh | sh; \
-        curl https://pyenv.run | bash; \
-        curl -sSL https://install.python-poetry.org | python -; \
-        echo 'export PATH="$HOME/.pyenv/bin:$PATH"' >> ~/.bashrc
-
-RUN \
-        --mount=type=cache,target=/home/vscode/.cache,uid=1000 \
-        export PATH="$HOME/.pyenv/bin:$PATH"; \
-        pyenv install 3.9.15
+        curl -sSL https://install.python-poetry.org | python -;
 
 # Trigger build if files change
 COPY \
