--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,40 +1,24 @@
 ---
-exclude: ^(migrations/|notes/|apps/)
+exclude: ^(migrations/|notes/|apps/|.venv/)
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
+      - { id: no-commit-to-branch, args: [--branch, master] }
       - id: check-added-large-files
-        args: [--maxkb=1000]
       - id: check-ast
       - id: check-byte-order-marker
       - id: check-case-conflict
       - id: check-docstring-first
       - id: check-json
       - id: check-merge-conflict
+      - id: check-toml
       - id: check-yaml
       - id: debug-statements
       - id: detect-private-key
       - id: end-of-file-fixer
       - id: mixed-line-ending
-      - { id: no-commit-to-branch, args: [--branch, master] }
       - id: trailing-whitespace
-  - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.1
-    hooks:
-      - id: blacken-docs
-        additional_dependencies: [black==20.8b1]
-  - repo: https://github.com/pycqa/bandit
-    rev: 1.7.4
-    hooks:
-      - id: bandit
-        exclude: tests/
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
-    hooks:
-      - id: flake8
-        args: [--max-line-length=88]
-        exclude: migrations/
   - repo: https://github.com/jorisroovers/gitlint
     rev: v0.17.0
     hooks:
@@ -50,16 +34,6 @@ repos:
             "--ignore=SC1091",
             "--ignore=SC2016",
           ]
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v2.37.3
-    hooks:
-      - id: pyupgrade
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.971
-    hooks:
-      - id: mypy
-        additional_dependencies:
-          - "types-requests==2.28.11.2"
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.0
     hooks:
@@ -67,45 +41,65 @@ repos:
         entry: prettier --write --list-different
         types: [javascript]
         exclude: ^search/templates/
-  - repo: https://github.com/pycqa/isort
-    rev: 5.10.1
-    hooks:
-      - id: isort
-        name: isort (python)
-        args:
-          [
-            "--filter-files",
-            "--force-single-line-imports",
-            "--profile",
-            "black",
-          ]
-  - repo: https://github.com/shellcheck-py/shellcheck-py
-    rev: v0.8.0.4
-    hooks:
-      - id: shellcheck
-        args: ["--severity=warning"]
-  - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.27.1
-    hooks:
-      - id: yamllint
-        args:
-          ["-d {extends: default, rules: {braces: {max-spaces-inside: -1}}}"]
   - repo: local
     hooks:
+      - id: python-bandit-vulnerability-check
+        entry: poetry run bandit
+        args: [-lll, --recursive, src/app]
+        language: system
+        files: ""
+        name: bandit
       - id: black
         name: black
         entry: poetry run black
         language: system
         types: [python]
+      - id: blacken-docs
+        name: blacken-docs
+        entry: poetry run blacken-docs
+        language: system
+      - id: darglint
+        name: darglint
+        entry: poetry run darglint
+        language: system
+        types: [python]
+        stages: [manual]
       - id: flake8
         name: flake8
         entry: poetry run flake8
         language: system
         types: [python]
-      - id: test
-        name: test
-        entry: poetry run nox
-        args: ["-r"]
+        require_serial: true
+        args: [--darglint-ignore-regex, .*]
+      - id: isort
+        name: isort
+        entry: poetry run isort
+        require_serial: true
+        language: system
+        types_or: [cython, pyi, python]
+        args: ["--filter-files"]
+      - id: mypy
+        name: mypy
+        entry: poetry run mypy
         language: system
         types: [python]
-        pass_filenames: false
+      - id: pyupgrade
+        name: pyupgrade
+        description: Automatically upgrade syntax for newer versions.
+        entry: poetry run pyupgrade
+        language: system
+        types: [python]
+        args: [--py37-plus]
+      - id: shellcheck
+        name: shellcheck
+        entry: poetry run shellcheck
+        language: system
+        types: [shell]
+        args: ["--severity=warning"]
+      - id: yamllint
+        name: yamllint
+        entry: poetry run yamllint
+        language: system
+        types: [yaml]
+        args:
+          ["-d {extends: default, rules: {braces: {max-spaces-inside: -1}}}"]
