--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ scikit-learn = "0.24.2"
 ipykernel = "^6.15.3"
 pandas = "1.3"
 typer = "^0.6.1"
-click = "^8.1.3"
 requests = "^2.28.1"
+click = "8.1.3"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.3"
@@ -38,9 +38,18 @@ flake8 = "^5.0.4"
 flake8-bandit = "^4.1.1"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^22.9.23"
-flake8-import-order = "^0.18.1"
 safety = "^2.3.1"
 nox-poetry = "^1.0.1"
+pygments = "^2.13.0"
+typeguard = "^2.13.3"
+pyupgrade = "^3.2.0"
+isort = "^5.10.1"
+darglint = "^1.8.1"
+bandit = "^1.7.4"
+gitlint-core = "^0.17.0"
+yamllint = "^1.28.0"
+shellcheck-py = "^0.8.0.4"
+blacken-docs = "^1.12.1"
 
 [tool.poetry.scripts]
 app = "src.app.console:main"
@@ -56,12 +65,15 @@ source = ["app"]
 fail_under = 100
 show_missing = true
 
+[tool.isort]
+force_single_line = true
+profile = "black"
+
 [tool.mypy]
 exclude = [".env", ".venv", "apps", "notes", "migrations"]
 ignore_missing_imports = "True"
 
 [tool.pylint]
-max-line-length = 120
 disable = ["C0114", "C0116"]
 ignore = ["notes", "migrations"]
 
