--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,11 @@
 ---
 exclude: ^(migrations/|notes/|apps/|.venv/)
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
-    hooks:
-      - { id: no-commit-to-branch, args: [--branch, master] }
+  - hooks:
+      - args:
+          - --branch
+          - master
+        id: no-commit-to-branch
       - id: check-added-large-files
       - id: check-ast
       - id: check-byte-order-marker
@@ -19,87 +20,107 @@ repos:
       - id: end-of-file-fixer
       - id: mixed-line-ending
       - id: trailing-whitespace
-  - repo: https://github.com/jorisroovers/gitlint
-    rev: v0.17.0
-    hooks:
+    repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
+  - hooks:
       - id: gitlint
-  - repo: https://github.com/AleksaC/hadolint-py
+    repo: https://github.com/jorisroovers/gitlint
+    rev: v0.17.0
+  - hooks:
+      - args:
+          - --ignore=DL3006
+          - --ignore=DL3008
+          - --ignore=SC1091
+          - --ignore=SC2016
+        id: hadolint
+    repo: https://github.com/AleksaC/hadolint-py
     rev: v2.10.0
-    hooks:
-      - id: hadolint
-        args:
-          [
-            "--ignore=DL3006",
-            "--ignore=DL3008",
-            "--ignore=SC1091",
-            "--ignore=SC2016",
-          ]
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.0
-    hooks:
-      - id: prettier
-        entry: prettier --write --list-different
-        types: [javascript]
+  - hooks:
+      - entry: prettier --write --list-different
         exclude: ^search/templates/
-  - repo: local
-    hooks:
-      - id: python-bandit-vulnerability-check
+        id: prettier
+        types:
+          - javascript
+    repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.0
+  - hooks:
+      - args:
+          - -lll
+          - --recursive
+          - src/app
         entry: poetry run bandit
-        args: [-lll, --recursive, src/app]
-        language: system
         files: ""
+        id: python-bandit-vulnerability-check
+        language: system
         name: bandit
-      - id: black
+      - entry: poetry run black
+        id: black
+        language: system
         name: black
-        entry: poetry run black
+        types:
+          - python
+      - entry: poetry run blacken-docs
+        id: blacken-docs
         language: system
-        types: [python]
-      - id: blacken-docs
         name: blacken-docs
-        entry: poetry run blacken-docs
+      - entry: poetry run darglint
+        id: darglint
         language: system
-      - id: darglint
         name: darglint
-        entry: poetry run darglint
-        language: system
-        types: [python]
-        stages: [manual]
-      - id: flake8
-        name: flake8
+        stages:
+          - manual
+        types:
+          - python
+      - args:
+          - --darglint-ignore-regex
+          - .*
         entry: poetry run flake8
+        id: flake8
         language: system
-        types: [python]
+        name: flake8
         require_serial: true
-        args: [--darglint-ignore-regex, .*]
-      - id: isort
-        name: isort
+        types:
+          - python
+      - args:
+          - --filter-files
         entry: poetry run isort
+        id: isort
+        language: system
+        name: isort
         require_serial: true
+        types_or:
+          - cython
+          - pyi
+          - python
+      - entry: poetry run mypy
+        id: mypy
         language: system
-        types_or: [cython, pyi, python]
-        args: ["--filter-files"]
-      - id: mypy
         name: mypy
-        entry: poetry run mypy
-        language: system
-        types: [python]
-      - id: pyupgrade
-        name: pyupgrade
+        types:
+          - python
+      - args:
+          - --py37-plus
         description: Automatically upgrade syntax for newer versions.
         entry: poetry run pyupgrade
+        id: pyupgrade
         language: system
-        types: [python]
-        args: [--py37-plus]
-      - id: shellcheck
-        name: shellcheck
+        name: pyupgrade
+        types:
+          - python
+      - args:
+          - --severity=warning
         entry: poetry run shellcheck
+        id: shellcheck
         language: system
-        types: [shell]
-        args: ["--severity=warning"]
-      - id: yamllint
-        name: yamllint
+        name: shellcheck
+        types:
+          - shell
+      - args:
+          - "-d {extends: default, rules: {braces: {max-spaces-inside: -1}}}"
         entry: poetry run yamllint
+        id: yamllint
         language: system
-        types: [yaml]
-        args:
-          ["-d {extends: default, rules: {braces: {max-spaces-inside: -1}}}"]
+        name: yamllint
+        types:
+          - yaml
+    repo: local
