--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pandas = "1.3"
 typer = "^0.6.1"
 requests = "^2.28.1"
 click = "8.1.3"
+desert = "^2022.9.22"
+marshmallow = "^3.19.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.3"
@@ -50,6 +52,7 @@ gitlint-core = "^0.17.0"
 yamllint = "^1.28.0"
 shellcheck-py = "^0.8.0.4"
 blacken-docs = "^1.12.1"
+flake8-docstrings = "^1.6.0"
 
 [tool.poetry.scripts]
 app = "src.app.console:main"
