--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,8 @@ yamllint = "^1.28.0"
 shellcheck-py = "^0.8.0.4"
 blacken-docs = "^1.12.1"
 flake8-docstrings = "^1.6.0"
+sphinx = "^5.3.0"
+sphinx-autodoc-typehints = "^1.19.5"
 
 [tool.poetry.scripts]
 app = "src.app.console:main"
