--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -51,8 +51,7 @@
         "python.analysis.typeCheckingMode": "basic",
         "python.formatting.provider": "black",
         "python.linting.enabled": true,
-        "python.pythonPath": "/app/.venv/bin/python",
-        "python.linting.pylintPath": "/app/.venv/bin/pylint",
+        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
         "python.linting.pylintEnabled": true,
         "workbench.colorCustomizations": {
           "titleBar.activeBackground": "#FF00FF",
