--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ blacken-docs = "^1.12.1"
 flake8-docstrings = "^1.6.0"
 sphinx = "^5.3.0"
 sphinx-autodoc-typehints = "^1.19.5"
+xdoctest = "^1.1.0"
 
 [tool.poetry.scripts]
 app = "src.app.console:main"
