--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -45,14 +45,16 @@
         "editor.formatOnSaveMode": "file",
         "editor.rulers": [88],
         "markdownlint.ignore": ["LICENSE"],
+        "pylint.importStrategy": "fromEnvironment",
+        "pylint.path": ["${workspaceFolder}/.venv/bin/pylint"],
         "python.analysis.diagnosticSeverityOverrides": {
           "reportGeneralTypeIssues": "none"
         },
         "python.analysis.typeCheckingMode": "basic",
         "python.formatting.provider": "black",
         "python.linting.enabled": true,
-        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
         "python.linting.pylintEnabled": true,
+        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
         "workbench.colorCustomizations": {
           "titleBar.activeBackground": "#FF00FF",
           "titleBar.activeForeground": "#ffffff"
