ignore notes and docs on pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 ---
-exclude: ^(apps/|docs/_build/|migrations/|notes/|.venv/)
+exclude: ^(apps/|docs/|migrations/|notes/|.venv/)
 repos:
   - hooks:
       - args:
