--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,9 @@ jobs:
     # CircleCI will report the results back to your VCS provider.
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - poetry-cache
       - python/install-packages:
           pkg-manager: poetry
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
@@ -37,6 +40,10 @@ jobs:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: poetry run nox 
+      - save_cache:
+          paths:
+            - ~/.cache/pypoetry
+          key: poetry-cache
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
