--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,15 @@ jobs:
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
       - run:
+          name: Get folder structure
+          command: ls -al
+      - run:
+          name: wut
+          command: ls -al
+      - run:
+          name: Run app
+          command: poetry run app
+      - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: poetry run nox 
