--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,17 @@ jobs:
     # CircleCI will report the results back to your VCS provider.
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - venv-cache
       - python/install-packages:
           pkg-manager: poetry
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
+      - save_cache:
+          paths:
+            - /home/circleci/project/.venv
+          key: venv-cache
       - run:
           name: Get folder structure
           command: ls -al
