--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,9 @@ jobs:
             - /home/circleci/project/.venv
           key: venv-cache
       - run:
+          name: List Poetry cache
+          command: poetry cache list
+      - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: poetry run nox 
