--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,10 +41,6 @@ jobs:
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
       - save_cache:
           paths:
-            - /home/circleci/project/.nox
-          key: nox-cache
-      - save_cache:
-          paths:
             - /home/circleci/project/.venv
           key: venv-cache
       - run:
@@ -53,10 +49,11 @@ jobs:
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
-          command: poetry run nox -s xdoctest
-      - run:
-          name: Get Folder Structure
-          command: ls -al
+          command: poetry run nox
+      - save_cache:
+          paths:
+            - /home/circleci/project/.nox
+          key: nox-cache
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
