--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
   test:
     docker:
       - image: cimg/python:3.8.15
+    parallelism: 4
     steps:
       - checkout
       - restore_cache:
@@ -83,6 +84,7 @@ jobs:
   typing:
     docker:
       - image: cimg/python:3.8.15
+    parallelism: 4
     steps:
       - checkout
       - restore_cache:
