--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,12 @@ jobs:
           pkg-manager: poetry
       - run:
           name: Run
+          command: |
+            set -e
+            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
+            poetry run nox -rs tests $TEST_FILES
+      - run:
+          name: Run
           command: poetry run nox -rs tests
       - save_cache:
           paths:
