--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           pkg-manager: poetry
       - run:
           name: Run
-          command: poetry run nox -rs docs xdoctest
+          command: poetry run nox -s docs xdoctest
       - save_cache:
           paths:
             - /home/circleci/project/.nox
@@ -54,7 +54,7 @@ jobs:
           pkg-manager: poetry
       - run:
           name: Run
-          command: poetry run nox -rs safety
+          command: poetry run nox -s safety
       - save_cache:
           paths:
             - /home/circleci/project/.nox
@@ -76,10 +76,10 @@ jobs:
           command: |
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
-            poetry run nox -rs tests $TEST_FILES
+            poetry run nox -s tests $TEST_FILES
       - run:
           name: Run
-          command: poetry run nox -rs tests
+          command: poetry run nox -s tests
       - save_cache:
           paths:
             - /home/circleci/project/.nox
@@ -102,7 +102,7 @@ jobs:
           pkg-manager: poetry
       - run:
           name: Run
-          command: poetry run nox -rs typeguard
+          command: poetry run nox -s typeguard
       - save_cache:
           paths:
             - /home/circleci/project/.nox
