--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,10 @@ jobs:
           pkg-manager: poetry
       - run:
           name: Run
-          command: poetry run nox -s typeguard
+          command: |
+            set -e
+            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
+            poetry run nox -s typeguard $TEST_FILES
       - save_cache:
           paths:
             - /home/circleci/project/.nox
