--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
           command: |
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
-            poetry run nox -s tests -k $TEST_FILES
+            poetry run nox -s tests -- -k $TEST_FILES
       - save_cache:
           paths:
             - /home/circleci/project/.nox
@@ -102,7 +102,7 @@ jobs:
           command: |
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
-            poetry run nox -s typeguard -k $TEST_FILES
+            poetry run nox -s typeguard -- -k $TEST_FILES
       - save_cache:
           paths:
             - /home/circleci/project/.nox
