--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,13 +77,15 @@ jobs:
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
             echo $TEST_FILES
+            echo $TEST_FILES
+            echo $TEST_FILES
       - run:
           name: Run
           command: |
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
             echo $TEST_FILES
-            poetry run nox -s tests -- $TEST_FILES
+            poetry run nox -s tests -- $(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
       - save_cache:
           paths:
             - /home/circleci/project/.nox
