--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
             echo $TEST_FILES
-            poetry run nox -s tests -- $(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
+            poetry run nox -- -s tests -- $(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
       - save_cache:
           paths:
             - /home/circleci/project/.nox
@@ -111,7 +111,7 @@ jobs:
           command: |
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings)
-            poetry run nox -s typeguard -- $TEST_FILES
+            poetry run nox -- -s typeguard -- $TEST_FILES
       - save_cache:
           paths:
             - /home/circleci/project/.nox
