--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,12 @@ requests = "^2.28.1"
 click = "8.1.3"
 desert = "^2022.9.22"
 marshmallow = "^3.19.0"
+python-dotenv = "^0.21.0"
+aiofiles = "^22.1.0"
+python-multipart = "^0.0.5"
+jinja2 = "^3.1.2"
+markdown = "^3.4.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.3"
