--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,15 @@ version: 2.1
 orbs:
   python: circleci/python@1.5.0
 
+parameters:
+  image-tag:
+    type: string
+    default: 3.8.16
+
 jobs:
   docs:
     docker:
-      - image: cimg/python:3.8.16
+      - image: cimg/python:<< pipeline.parameters.image-tag >>
     steps:
       - checkout
       - restore_cache:
@@ -26,7 +31,7 @@ jobs:
           path: docs/_build
   lint:
     docker:
-      - image: cimg/python:3.8.16
+      - image: cimg/python:<< pipeline.parameters.image-tag >>
     steps:
       - checkout
       - restore_cache:
@@ -44,7 +49,7 @@ jobs:
           key: lint-cache-v{{ .Environment.CACHE_VERSION }}-{{ checksum ".pre-commit-config.yaml" }}
   security:
     docker:
-      - image: cimg/python:3.8.16
+      - image: cimg/python:<< pipeline.parameters.image-tag >>
     steps:
       - checkout
       - restore_cache:
@@ -62,7 +67,7 @@ jobs:
           key: security-cache-v{{ .Environment.CACHE_VERSION }}-{{ checksum "poetry.lock" }}
   test:
     docker:
-      - image: cimg/python:3.8.16
+      - image: cimg/python:<< pipeline.parameters.image-tag >>
     parallelism: 4
     steps:
       - checkout
@@ -89,7 +94,7 @@ jobs:
           path: htmlcov
   typing:
     docker:
-      - image: cimg/python:3.8.16
+      - image: cimg/python:<< pipeline.parameters.image-tag >>
     parallelism: 4
     steps:
       - checkout
